--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,99 @@
-#table-of-contents {font-family: 'Roboto Condensed', sans-serif;}
+/**** Typography ****/
+/* html { font-size: 100%; }*/
 
-@supports (display: grid) {
-   #content {
-       display: grid;
-       grid-template-columns: 70% 30%;
-       grid-gap: 2rem;
-   }
+#table-of-contents {
+    font-family: 'Roboto Condensed', sans-serif;
 }
+#table-of-contents li {
+    font-size: 1.5rem;
+}
+
+p, .outline-2 li {
+    font-family: 'Source Serif Pro', serif;
+    line-height: 135%;
+    font-size: 1.5em;
+}
+
+pre {
+    font-family: 'Inconsolata', monospace;
+    font-size: 1.2em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    text-transform: uppercase;
+    font-family: 'Merriweather Sans', sans-serif;
+}
+
+/******************/
+
+/***** Grid *******/
+@supports (display: frid) {
+    #content {
+	display: grid;
+	grid-template-columns: 70% 30%;
+	grid-column-gap: 2rem;
+	grid-auto-flow: column;
+	justify-content: start;
+    }
+    #content nav {
+	grid-column: 2/-1;
+    }
+
+    .outline-2 {
+	grid-column: 1/2;
+	padding-left: 2rem;
+	align-self: end;
+    }
+}
+
+/*****************/
+
+/**** Flexbox ****/
+
+@supports  (display: grid) {
+    #content {
+	display: flex;
+	width: 100%;
+    }
+
+    #content > nav {
+	order: 2;
+	flex: 1;
+    }
+
+    .outline-2 {
+	order: 1;
+	flex: 0;
+    }
+}
+/*****************/
+
+/**** Floats ****/
+@supports  (display: frid) {
+#content > nav {
+    float: right;
+    width: 20%;
+    }
+#content > div:not(:first-child) {
+    float: left;
+    width: 80%;
+}
+}
+/****************/    
+/*
+veritcal title: system
+h1 {
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  float: left;
+  margin: 1.5rem 0 0 -3.8rem;
+  font-size: 1.8em;
+  background: #96e5fb;
+  padding: 8px 0; }
+*/
