--- a/css/grid.css
+++ b/css/grid.css
@@ -2,18 +2,27 @@
     #content {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-column-gap: 2rem;
-	grid-auto-flow: column;
-	justify-content: start;
+	grid-column-gap: 2rem;	grid-auto-flow: row;
     }
     aside {
 	grid-column: 10/-1;
     }
 
     section {
-	grid-column: 1/10;
+	grid-row-start: 1;
+	grid-column: 3 / 9;
 	padding-left: 2rem;
-	align-self: start;
+    }
+
+    #footnotes {
+	grid-column: 3 / 9;
+    }
+    pre {
+	white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
+	white-space: -pre-wrap; /* Opera */
+	white-space: -o-pre-wrap; /* Opera */
+	white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+	word-wrap: break-word; /* IE 5.5+ */
     }
 }
 
